--- a/GenData/main.ipynb
+++ b/GenData/main.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,6 +295,19 @@
     "            return True\n",
     "    return False\n",
     "\n",
+    "def isImgOverlap2(img1, img2):\n",
+    "    # img1 is before\n",
+    "    # img2 is after\n",
+    "    arr1 = np.array(img1)\n",
+    "    arr2 = np.array(img2)\n",
+    "    cnt1 = np.unique(arr1, return_counts=True)\n",
+    "    cnt2 = np.unique(arr2, return_counts=True)\n",
+    "    dic1 = makeDictFromLists(cnt1[0], cnt1[1])\n",
+    "    dic2 = makeDictFromLists(cnt2[0], cnt2[1])\n",
+    "    for key in dic1:\n",
+    "        if key != 0 and key in dic2 and dic1[key] > dic2[key] + 7000:\n",
+    "            return True\n",
+    "    return False\n",
     "\n",
     "def isInBoundary(fg, bg, sz, rot, flip, mirror, x, y):\n",
     "    width, height = bg.size\n",
@@ -318,6 +331,32 @@
     "        if new_px > width or new_px < 0:\n",
     "            return False\n",
     "        if new_py > height or new_py < 0:\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "def isInBoundary2(fg, bg, sz, rot, flip, mirror, x, y):\n",
+    "    width, height = bg.size\n",
+    "    fwidth, fheight = fg.size\n",
+    "    cx = int(width / 2)\n",
+    "    cy = int(height / 2)\n",
+    "    thetha = rot\n",
+    "\n",
+    "    rad = math.radians(thetha)\n",
+    "    base_width = width/10\n",
+    "    fg = fg.resize((int(base_width*sz), int(base_width/fwidth*fheight*sz)))\n",
+    "    fwidth, fheight = fg.size\n",
+    "    loc_x = int(x*width)\n",
+    "    loc_y = int(y*height)\n",
+    "    corners = [[loc_x, loc_y], [loc_x+fwidth, loc_y], [loc_x, loc_y+fheight], [loc_x+fwidth, loc_y+fheight]]\n",
+    "    newCorners = []\n",
+    "    for px, py in corners:\n",
+    "        new_px = cx + int(float(px-cx) * math.cos(rad) + float(py-cy) * math.sin(rad))\n",
+    "        new_py = cy + int(-(float(px-cx) * math.sin(rad)) + float(py-cy) * math.cos(rad))\n",
+    "        #print(px, py, new_px, new_py, width, height)\n",
+    "        thres = 25\n",
+    "        if new_px > width + thres or new_px < -thres:\n",
+    "            return False\n",
+    "        if new_py > height + thres or new_py < -thres:\n",
     "            return False\n",
     "    return True\n",
     "\n",
@@ -359,6 +398,15 @@
     "    y = random.random()\n",
     "    return sz, rot, flip, mirror, x, y\n",
     "\n",
+    "def randomPaste3():\n",
+    "    # Output: Random variables for pasting fg on bg\n",
+    "    sz = 1 + (random.random())\n",
+    "    rot = ( -0.5 + random.random() ) * 40\n",
+    "    flip = 0\n",
+    "    mirror = random.randrange(0, 2)\n",
+    "    x = -0.1 + random.random() * 1.1\n",
+    "    y = -0.1 + random.random() * 1.1\n",
+    "    return sz, rot, flip, mirror, x, y\n",
     "\n",
     "def random_square_background(dir_name,size=-1,N = 1,threshold_percent = 100):\n",
     "    l = []\n",
@@ -416,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,6 +573,35 @@
     "        img = pasteOn2(crewmate, img, sz, rot, flip, mirror, x, y)\n",
     "        label = labelnew\n",
     "        cnt += 1\n",
+    "    return img, label, cnt\n",
+    "\n",
+    "def gen5(crewpool_imgset, it):\n",
+    "    bg = random_square_background(\"bg\")\n",
+    "    # Same Size, No rotate, No flip, No mirror, No overlap, No out of edge\n",
+    "    # Initiate label\n",
+    "    if isinstance(bg,np.ndarray):\n",
+    "        bg = Image.fromarray(bg)\n",
+    "    label_size = bg.size\n",
+    "    #print(label_size)\n",
+    "    label = Image.new(\"RGB\", label_size)\n",
+    "    scale = 255\n",
+    "    minus = scale//it\n",
+    "    img = bg\n",
+    "    cnt = 0\n",
+    "    for i in range(it):\n",
+    "        sz, rot, flip, mirror, x, y = randomPaste3()\n",
+    "        crewmate = random.choice(crewpool_imgset)\n",
+    "        figureImg = convertTransparentFromPIL(crewmate, scale-minus*i)\n",
+    "        if not isInBoundary2(figureImg, label, sz, rot, flip, mirror, x, y):\n",
+    "            #print(\"OUT OF BOUNDARY\")\n",
+    "            continue\n",
+    "        labelnew = pasteOn2(figureImg, label, sz, rot, flip, mirror, x, y)\n",
+    "        if isImgOverlap2(label, labelnew):\n",
+    "            # print(\"OVERLAP\")\n",
+    "            continue\n",
+    "        img = pasteOn2(crewmate, img, sz, rot, flip, mirror, x, y)\n",
+    "        label = labelnew\n",
+    "        cnt += 1\n",
     "    return img, label, cnt"
    ]
   },
@@ -537,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -592,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -615,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -1221,8 +1298,7 @@
       "596 images done\n",
       "597 images done\n",
       "598 images done\n",
-      "599 images done\n",
-      "600 images done\n"
+      "599 images done\n"
      ]
     }
    ],
@@ -1233,13 +1309,14 @@
     "###### DONT TOUCH ANYTHING ABOVE THIS #####\n",
     "\n",
     "# CHANGE PARAMETERS BELOW AND RUN\n",
-    "fout = open(\"set9/count.txt\", \"w\", buffering=1)\n",
-    "for i in range(601):\n",
-    "    tries = random.randint(1,20)\n",
-    "    img, lab, cnt = gen4(crewpool_imgset, tries)\n",
+    "setNo = \"set12\"\n",
+    "fout = open((setNo+\"/count.txt\"), \"w\", buffering=1)\n",
+    "for i in range(600):\n",
+    "    tries = random.randint(3,20)\n",
+    "    img, lab, cnt = gen5(crewpool_imgset, tries)\n",
     "    img = img.convert(\"RGB\")\n",
-    "    img.save(\"set9/img\"+str(i)+\".jpg\")\n",
-    "    lab.save(\"set9/label\"+str(i)+\".png\")\n",
+    "    img.save(setNo+\"/img\"+str(i)+\".jpg\")\n",
+    "    lab.save(setNo+\"/label\"+str(i)+\".png\")\n",
     "    fout.write(str(i)+\" \"+str(cnt)+\"\\n\")\n",
     "    fout.flush()\n",
     "    print(str(i)+\" images done\")\n",
@@ -1250,15 +1327,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.7629609107971191\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   }
  ],
